[Sync] Always upload stack traces for USS DeviceInfo.

BUG=650861

Review-Url: https://codereview.chromium.org/2369033005
Cr-Commit-Position: refs/heads/master@{#421386}